Fix switch slider positioning: Adjust left and bottom offsets for improved alignment

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -60,8 +60,8 @@
   content: "";
   height: 1.05em;
   width: 1.05em;
-  left: 0.2em;
-  bottom: 0.2em;
+  left: 0.17em;
+  bottom: 0.17em;
   background-color: #51c978;
   border-radius: 50px;
   box-shadow: 0 0px 20px rgba(0, 0, 0, 0.4);
